MIN API NOW IS 10
Cambie la minimima version de android a 10, ahora la aplicacion tiene
darkstyle, consumi todos los metodos. fase beta terminada.

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/azul"
+        android:centerColor="@color/colorPrimaryDark"
         android:endColor="@color/navy"
         android:startColor="@color/colorPrimary"
         android:type="linear" />
