--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.android.muniappbeta.MainActivity">
+    tools:context="pe.gob.munihuacho.municipalidadhuacho.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
