--- a/app/src/main/res/layout/fragment_caja_central.xml
+++ b/app/src/main/res/layout/fragment_caja_central.xml
@@ -2,10 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.muniappbeta.fragments.CajaCentralFragment"
-    android:padding="20dp">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context="pe.gob.munihuacho.municipalidadhuacho.forms.CajaCentralFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -37,7 +34,7 @@
                 android:hint="AAAA-MM-DD"
                 android:padding="5dp"
                 android:background="@drawable/edittextstyle"
-              />
+                android:textColor="@android:color/black" />
 
         </LinearLayout>
 
@@ -66,7 +63,8 @@
                 android:layout_weight="1.5"
                 android:hint="0000000"
                 android:padding="5dp"
-                android:background="@drawable/edittextstyle"/>
+                android:background="@drawable/edittextstyle"
+                android:textColor="@android:color/black" />
 
         </LinearLayout>
 
@@ -95,7 +93,8 @@
                 android:layout_weight="1.5"
                 android:padding="5dp"
                 android:hint="@string/ingreseCajero"
-                android:background="@drawable/edittextstyle"/>
+                android:background="@drawable/edittextstyle"
+                android:textColor="@android:color/black" />
         </LinearLayout>
 
         <LinearLayout
@@ -111,7 +110,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/btnBuscarCC"
                 android:layout_marginTop="20dp"
-                android:layout_weight="0.21" />
+                android:layout_weight="0.21"
+                android:background="@drawable/button_style"
+                android:textColor="@color/negro"
+                android:textStyle="normal|bold" />
         </LinearLayout>
     </LinearLayout>
 
