--- a/app/src/main/res/layout/fragment_consulta_papeletas.xml
+++ b/app/src/main/res/layout/fragment_consulta_papeletas.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.muniappbeta.fragments.ConsultaPapeletasFragment">
-
+    tools:context="pe.gob.munihuacho.municipalidadhuacho.forms.ConsultaPapeletasFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,58 +26,64 @@
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginBottom="2dp">
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp">
+                android:layout_weight="1"
+                android:layout_marginRight="5dp">
+
+                <TextView
+                    android:text="@string/ingPapeletas"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/textView2"
+                    android:layout_weight="1.5"
+                    android:gravity="bottom|left"
+                    android:textStyle="normal|bold" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/inputDni_Papeleta"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittextstyle"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2">
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginRight="5dp">
-
-                    <TextView
-                        android:text="@string/ingPapeletas"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/textView2"
-                        android:layout_weight="1.5"
-                        android:gravity="bottom|left"
-                        android:textStyle="normal|bold" />
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:inputType="textPersonName"
-                        android:ems="10"
-                        android:id="@+id/inputDni_Papeleta"
-                        android:layout_weight="1"
-                        android:background="@drawable/edittextstyle"
-                        android:paddingLeft="5dp"
-                        android:paddingRight="5dp"
-                        android:textSize="16sp" />
-                </LinearLayout>
+                    android:layout_weight="1.5"></LinearLayout>
 
                 <Button
                     android:text="@string/Buscar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/btnBuscarCP"
-                    android:layout_weight="2"
-                    android:background="@drawable/button_style"/>
+                    android:layout_weight="1"
+                    android:background="@drawable/button_style"
+                    android:textColor="@color/negro"
+                    android:textStyle="normal|bold" />
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -134,4 +139,5 @@
 
         </LinearLayout>
     </LinearLayout>
+
 </FrameLayout>
