--- a/app/src/main/res/layout/fragment_consultar_pago.xml
+++ b/app/src/main/res/layout/fragment_consultar_pago.xml
@@ -3,74 +3,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.muniappbeta.fragments.ConsultarPagoFragment"
- android:padding="16dp">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context="pe.gob.munihuacho.municipalidadhuacho.fragments.ConsultarPagoFragment">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/gerenciadadmtributaria"
-            android:id="@+id/imageView6"
-            android:layout_weight="2"
-            android:scaleType="centerInside" />
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="2"
+            android:background="@color/background">
 
-            <ScrollView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                app:srcCompat="@drawable/encabezadopapeletas"
+                android:id="@+id/imageView6"
+                android:layout_weight="3"
+                android:adjustViewBounds="true" />
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-                    <Button
-                        android:text="@string/RegistroCivil"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/btnRegistroCivil"
-                        android:drawableLeft="@drawable/ic_perm_identity_black"
-                        />
-
-                    <Button
-                        android:text="@string/CajaCentral"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/btnCajaCentral"
-                        android:drawableLeft="@drawable/ic_attach_money_black"
-                         />
-                </LinearLayout>
-            </ScrollView>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:elevation="0dp">
+                android:orientation="vertical" >
 
-                <TextView
-                    android:text="@string/ruc"
-                    android:layout_width="wrap_content"
+                <Button
+                    android:text="@string/RegistroCivil"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView10"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:id="@+id/btnRegistroCivil"
+                    android:drawableLeft="@drawable/ic_perm_identity_black"
+                    android:background="@drawable/button_style"
+                    android:textColor="@color/negro"
+                    android:textStyle="normal|bold" />
+
+                <Button
+                    android:text="@string/CajaCentral"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnCajaCentral"
+                    android:drawableLeft="@drawable/ic_attach_money_black"
+                    android:background="@drawable/button_style"
+                    android:textColor="@color/negro"
+
+                    android:layout_marginTop="10dp"
+                    android:textStyle="normal|bold" />
             </LinearLayout>
+        </ScrollView>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:elevation="0dp">
+
+            <TextView
+                android:text="@string/ruc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:layout_weight="1"
+                android:textAlignment="center" />
         </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
