--- a/app/src/main/res/layout/fragment_registro_estado_civil.xml
+++ b/app/src/main/res/layout/fragment_registro_estado_civil.xml
@@ -1,11 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.muniappbeta.forms.RegistroEstadoCivilFragment"
-    android:padding="16dp">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context="pe.gob.munihuacho.municipalidadhuacho.forms.RegistroEstadoCivilFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -16,7 +14,23 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.5">
+            android:layout_weight="2"
+            android:background="@color/background">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/encabezadopapeletas"
+                android:id="@+id/imageView2"
+                android:adjustViewBounds="true" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:layout_marginTop="10dp">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -36,14 +50,16 @@
                     android:paddingRight="5dp"
                     android:textStyle="normal|bold"
                     android:layout_weight="1"
-                    style="@android:style/Widget.DeviceDefault.EditText"
                     android:selectAllOnFocus="false"
                     android:textAllCaps="false"
                     android:background="@drawable/edittextstyle"
                     android:layout_marginBottom="3dp"
-                    android:keepScreenOn="false" />
+                    android:keepScreenOn="false"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="@color/gris" />
 
                 <EditText
+                    android:textColorHint="@color/gris"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textPersonName"
@@ -56,9 +72,9 @@
                     android:paddingRight="5dp"
                     android:textStyle="normal|bold"
                     android:textAllCaps="false"
-                    style="@android:style/Widget.DeviceDefault.EditText"
                     android:background="@drawable/edittextstyle"
-                    android:layout_marginBottom="3dp" />
+                    android:layout_marginBottom="3dp"
+                    android:textColor="@android:color/black" />
 
             </LinearLayout>
 
@@ -69,6 +85,7 @@
                 android:layout_weight="1">
 
                 <EditText
+                    android:textColorHint="@color/gris"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textPersonName"
@@ -82,7 +99,8 @@
                     android:background="@drawable/edittextstyle"
                     android:textStyle="normal|bold"
                     android:textAllCaps="false"
-                    android:layout_marginBottom="3dp" />
+                    android:layout_marginBottom="3dp"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -98,14 +116,14 @@
                     android:layout_weight="1">
 
                     <Spinner
+
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/spOpcionesReC"
                         android:layout_weight="1"
-                        android:spinnerMode="dialog"
-                        android:background="@drawable/spinner_background"
                         android:layout_marginRight="6dp"
-                        android:layout_marginBottom="3dp" />
+                        android:layout_marginBottom="3dp"
+                        android:spinnerMode="dialog" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -122,7 +140,9 @@
                         android:layout_weight="1"
                         android:textSize="14sp"
                         android:background="@drawable/button_style"
-                        android:layout_marginBottom="3dp" />
+                        android:layout_marginBottom="3dp"
+                        android:textColor="@color/negro"
+                        android:textStyle="normal|bold" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -132,7 +152,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1.5">
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -170,4 +190,5 @@
 
         </LinearLayout>
     </LinearLayout>
+
 </FrameLayout>
