--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,26 +15,23 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="76dp"
-        android:layout_height="wrap_content"
+        android:layout_width="73dp"
+        android:layout_height="77dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/escudominiatura"
-        android:adjustViewBounds="true"
-        android:layout_weight="1" />
+        app:srcCompat="@drawable/escudo"
+        android:adjustViewBounds="true" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/muniHuaura"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_weight="1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="munihuacho@gob.pe"
-        android:layout_weight="1" />
+        android:text="munihuacho@gob.pe" />
 
 </LinearLayout>
