--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,33 +4,21 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_consultarpago"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_attach_money_black_48dp"
             android:title="@string/consultarPago" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="nada" />
+            android:id="@+id/nav_operacionvehiculo"
+            android:icon="@drawable/ic_directions_car_black_48dp"
+            android:title="@string/operVehiculo" />
+        <item
+            android:id="@+id/nav_papeletas"
+            android:icon="@drawable/ic_content_copy_black_48dp"
+            android:title="@string/papeletas" />
         <item
             android:id="@+id/nav_regyestadocivil"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_person_black_48dp"
             android:title="@string/regyestcivil" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
