--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="negro">#000000</color>
     <color name="marfil">#FFFFF0</color>
     <color name="dorado">#EEE8AA</color>
+    <color name="background">#002241</color>
 </resources>
