--- a/app/src/main/res/layout/fragment_caja_central.xml
+++ b/app/src/main/res/layout/fragment_caja_central.xml
@@ -34,7 +34,8 @@
                 android:hint="AAAA-MM-DD"
                 android:padding="5dp"
                 android:background="@drawable/edittextstyle"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textColorHint="@color/gris"/>
 
         </LinearLayout>
 
@@ -64,7 +65,8 @@
                 android:hint="0000000"
                 android:padding="5dp"
                 android:background="@drawable/edittextstyle"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textColorHint="@color/gris"/>
 
         </LinearLayout>
 
@@ -94,7 +96,8 @@
                 android:padding="5dp"
                 android:hint="@string/ingreseCajero"
                 android:background="@drawable/edittextstyle"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textColorHint="@color/gris"/>
         </LinearLayout>
 
         <LinearLayout
