--- a/app/src/main/res/layout/fragment_cc_cta_ahorro.xml
+++ b/app/src/main/res/layout/fragment_cc_cta_ahorro.xml
@@ -158,8 +158,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/tabla"
-                        android:layout_marginTop="5dp"
-                        android:layout_gravity="top|center">
+                        android:layout_marginTop="5dp">
 
                         <TableRow
                             android:layout_width="match_parent"
