--- a/app/src/main/res/layout/fragment_consulta_papeletas.xml
+++ b/app/src/main/res/layout/fragment_consulta_papeletas.xml
@@ -51,14 +51,15 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:ems="10"
                     android:id="@+id/inputDni_Papeleta"
                     android:layout_weight="1"
                     android:background="@drawable/edittextstyle"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -101,8 +102,6 @@
             android:splitMotionEvents="false"
             android:touchscreenBlocksFocus="false"
             android:transitionGroup="false"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp">
 
             <HorizontalScrollView
